# drumrox

./: CMakeLists.txt  ChangeLog  NEWS  README.md  TODO  drumrox.cpp  drumrox.h  drumrox.ttl  drumrox_hydrogen.cpp  drumrox_hydrogen.h  drumrox_ui.cpp  dsp.h  kits.cpp  kits.h  manifest.ttl  nknob.c  utl.cpp  utl.h
docs/: index.md  manual.md
ttl/: drumrox.ttl  manifest.ttl
ttl-multi/: drumrox-multi.ttl  manifest.ttl
